k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pj-formations
spec:
  template:
    spec:
      containers:
        - name: pj-formations
          image: shokohsc/pj-formations
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 256M
