k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pj-recrutement-et-conseil
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    dashboard.shokohsc.home/name: dev-pj-recrutement-et-conseil
    dashboard.shokohsc.home/url: https://dev.pj-recrutement-et-conseil.shokohsc.home
    dashboard.shokohsc.home/icon: wrench
spec:
  rules:
  - host: dev.pj-recrutement-et-conseil.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pj-recrutement-et-conseil
            port:
              number: 80
  tls:
  - hosts:
    - dev.pj-recrutement-et-conseil.shokohsc.home
    secretName: pj-recrutement-et-conseil-cert
